syntax = "proto3";

option csharp_namespace = "ArithmeticNamespace";

package Arithmetic;

//요청 형식
message RequestMessage{
	int32 first = 1;
	int32 second = 2;
}

// 응답 형식
message ResponseMessage{
	int32 result = 1;
}

// 인터페이스 정의
service ArithmeticService{
	rpc Add (RequestMessage) returns (ResponseMessage) {}
	rpc Substract (RequestMessage) returns (ResponseMessage) {}
}